--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,35 @@
 <!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <h2 class="fw-bold mb-3">Contact</h2>
+        <p class="text-muted">
+            Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
+            Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+        </p>
+        <div class="col-lg-8">
+
+
+            <form class="bg-light p-4 rounded shadow-sm bg-secondary">
+                <div class="mb-3 row">
+                    <label for="email" class="fw-bold col-sm-2 col-form-label fw-semibold">Your E-mail</label>
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email" placeholder="Your email">
+                    </div>
+                </div>
+
+                <div class="mb-3 row">
+                    <label for="message" class="fw-bold col-sm-2 col-form-label fw-semibold">Your message</label>
+                    <div class="col-sm-10">
+                        <textarea class="form-control" id="message" rows="4"
+                            placeholder="Please enter your message here..."></textarea>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+
+        </div>
+    </div>
+</div>
