--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,22 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<style>
+    .bg-cover {
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+</style>
+
+<div class="vh-100 d-flex flex-column justify-content-center align-items-center text-center text-dark bg-light bg-cover"
+    style="background-image: url('../../website/assets/img/bg.jpg');">
+
+    <div class="bg-white bg-opacity-90 px-4 py-3 rounded mb-3 w-75">
+        <h1 class="display-3 fw-bold">One Page Wonder</h1>
+    </div>
+
+    <div class="bg-white bg-opacity-90 px-4 py-2 rounded w-75">
+        <h3 class="fw-normal">Will Knock Your Socks Off</h3>
+    </div>
+
+</div>
