--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,65 +1,56 @@
 <!-- Portfolio -->
 <div>
     <!-- Header -->
-    <h1>
-        Portfolio
-    </h1>
-
+    <h1>Portfolio</h1>
+  
     <!-- Text -->
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi corporis magnam labore, eos quod quae ducimus
-        dolorum suscipit, quaerat mollitia libero, nostrum necessitatibus sit ullam voluptate expedita sapiente
-        quibusdam. Dignissimos commodi optio nostrum ea error animi qui, cum mollitia sed itaque dolore molestiae
-        reprehenderit! Fugiat eum exercitationem sit fuga suscipit consequatur.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo sequi corporis magnam labore, eos quod quae ducimus
+      dolorum suscipit, quaerat mollitia libero, nostrum necessitatibus sit ullam voluptate expedita sapiente
+      quibusdam. Dignissimos commodi optio nostrum ea error animi qui, cum mollitia sed itaque dolore molestiae
+      reprehenderit! Fugiat eum exercitationem sit fuga suscipit consequatur.
     </p>
-
+  
     <!-- Cards -->
     <div class="container my-4">
-        <div class="row text-center g-2">
-            <div class="col-md-4 mb-4">
-                <div class="card border-0" style="width: 18rem;">
-                    <img src="../../website/assets/img/big-project-image.png" class="card-img-top" alt="...">
-                    <div class="card-body bg-transparent">
-                        <h5 class="card-title text-primary">Project Name</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
-                            necessitatibus
-                            sint
-                            ipsam eum totam quas quod.
-                        </p>
-                    </div>
-                </div>
+      <div class="row g-3 justify-content-center">
+        
+        <!-- Card 1 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card border-0 h-100">
+            <img src="../../website/assets/img/big-project-image.png" class="card-img-top rounded-0" alt="...">
+            <div class="card-body bg-transparent text-start">
+              <h5 class="card-title text-primary">Project Name</h5>
+              <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci necessitatibus sint
+                ipsam eum totam quas quod.</p>
             </div>
-
-            <div class="col-md-4 mb-4">
-                <div class="card border-0" style="width: 18rem;">
-                    <img src="../../website/assets/img/big-project-image.png" class="card-img-top" alt="...">
-                    <div class="card-body bg-transparent">
-                        <h5 class="card-title text-primary">Project Name</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
-                            necessitatibus
-                            sint
-                            ipsam eum totam quas quod.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-4">
-                <div class="card border-0" style="width: 18rem;">
-                    <img src="../../website/assets/img/big-project-image.png" class="card-img-top" alt="...">
-                    <div class="card-body bg-transparent">
-                        <h5 class="card-title text-primary">Project Name</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
-                            necessitatibus
-                            sint
-                            ipsam eum totam quas quod.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
+          </div>
         </div>
+  
+        <!-- Card 2 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card border-0 h-100">
+            <img src="../../website/assets/img/big-project-image.png" class="card-img-top rounded-0" alt="...">
+            <div class="card-body bg-transparent text-start">
+              <h5 class="card-title text-primary">Project Name</h5>
+              <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci necessitatibus sint
+                ipsam eum totam quas quod.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 3 -->
+        <div class="col-md-6 col-lg-4">
+          <div class="card border-0 h-100">
+            <img src="../../website/assets/img/big-project-image.png" class="card-img-top rounded-0" alt="...">
+            <div class="card-body bg-transparent text-start">
+              <h5 class="card-title text-primary">Project Name</h5>
+              <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci necessitatibus sint
+                ipsam eum totam quas quod.</p>
+            </div>
+          </div>
+        </div>
+  
+      </div>
     </div>
-
-
-</div>
+  </div>
