--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,22 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<div class="container-fluid py-5">
+    <div class="row">
+      <!-- Texto -->
+      <div class="col-md-8">
+        <h2>
+          <span class="fw-bold">This First Heading</span> 
+          <span class="text-secondary">Will Catch Your Eye</span>
+        </h2>
+        <p class="text-muted">
+          Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
+          Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+        </p>
+      </div>
+      
+      <!-- Imagen -->
+      <div class="col-md-4 text-center">
+        <img src="../../website/assets/img/1.jpg" alt="Avatar" class="img-fluid rounded-circle" style="max-width: 250px;">
+      </div>
+    
+    </div>
+  </div>
