--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,22 @@
 <!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<!-- your html code here -->
+<div class="container-fluid p-5">
+    <div class="row">
+        <div class="col-md-4 text-center">
+            <img src="../../website/assets/img/2.jpg" alt="Avatar" class="img-fluid rounded-circle"
+                style="max-width: 250px;">
+        </div>
+        <div class="col-md-8">
+            <h2>
+                <span class="fw-bold">The second Heading</span>
+                <span class="text-secondary">Is Pretty cool</span>
+            </h2>
+            <p class="text-muted">
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper.
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
+                commodo.
+            </p>
+        </div>
+
+    </div>
+</div>
